--- a/src/pages/contact/style.module.css
+++ b/src/pages/contact/style.module.css
@@ -5,6 +5,7 @@
   color: #161616;
   scroll-behavior: smooth;
   padding-top: 120px;
+  padding-bottom: 24px;
 }
 
 .heroSection {
